--- a/game-of-life.csproj
+++ b/game-of-life.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2"/>
         <PackageReference Include="NUnit" Version="3.14.0"/>
     </ItemGroup>
 
